- Simple chmonya page template;

--- a/src/Zhyttya.UI.Uno/Zhyttya.UI.Uno.Shared/App.xaml
+++ b/src/Zhyttya.UI.Uno/Zhyttya.UI.Uno.Shared/App.xaml
@@ -5,9 +5,8 @@
             <ResourceDictionary.MergedDictionaries>
                 <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
                 <!--<MapResources xmlns="using:Uno.UI.Maps"/>-->
-                <!-- Add resource dictionaries here -->                
+                <ResourceDictionary Source="/Resources/Styles/DefaultTheme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
-            <!-- Add resources here -->
         </ResourceDictionary>
     </Application.Resources>
 
