--- a/src/Zhyttya.UI.Uno/Zhyttya.UI.Uno.Shared/MainPage.xaml
+++ b/src/Zhyttya.UI.Uno/Zhyttya.UI.Uno.Shared/MainPage.xaml
@@ -1,7 +1,42 @@
 ﻿<Page x:Class="Zhyttya.UI.Uno.MainPage" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+      Background="{StaticResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
-        
+
+        <StackPanel Spacing="10">
+            <Grid HorizontalAlignment="Center">
+                
+                <Ellipse Margin="10" Width="200" Height="200">
+                    <Ellipse.Fill>
+                        <ImageBrush ImageSource="ms-appx:///Resources/Images/chmonya.png" Stretch="UniformToFill"/>
+                    </Ellipse.Fill>
+                </Ellipse>
+
+                <Border Background="#2b2731" CornerRadius="20" Padding="10"
+                        HorizontalAlignment="Right" VerticalAlignment="Bottom">
+                    <TextBlock Text="Пленный" FontSize="14" Foreground="#15bfb0"/>
+                </Border>
+
+            </Grid>
+
+            <Border Background="White" CornerRadius="20" Margin="20,0,20,0" Padding="20">
+                <StackPanel>
+                    <TextBlock Text="Андрей Анатольевич Рязанцев" FontSize="18"
+                               HorizontalAlignment="Center"/>
+
+                    <TextBlock Text="22 ноября 1998" FontSize="18"
+                               HorizontalAlignment="Center"/>
+                </StackPanel>
+            </Border>
+
+            <Border Background="#391e62" CornerRadius="20" Margin="20,0,20,0" Padding="20">
+                <StackPanel>
+                    <TextBlock Text="Оставить сообщение" FontSize="18" Foreground="White"
+                               HorizontalAlignment="Center"/>
+                </StackPanel>
+            </Border>
+
+        </StackPanel>
+
     </Grid>
 </Page>
