--- a/src/Zhyttya.UI.Uno/Zhyttya.UI.Uno.Shared/Pages/ChmonyaPage.xaml
+++ b/src/Zhyttya.UI.Uno/Zhyttya.UI.Uno.Shared/Pages/ChmonyaPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Zhyttya.UI.Uno.MainPage" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+﻿<Page x:Class="Zhyttya.UI.Uno.Pages.ChmonyaPage" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:android="http://uno.ui/android"
       xmlns:not_android="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       mc:Ignorable="d android"
@@ -11,11 +11,11 @@
             <Setter Property="Foreground" Value="Black"/>
         </Style>
     </Page.Resources>
-    
+
     <Grid>
 
         <StackPanel Spacing="10">
-            
+
             <!-- Image -->
             <Grid HorizontalAlignment="Center">
                 <Ellipse Margin="10" Width="200" Height="200">
@@ -29,7 +29,7 @@
                     <TextBlock Text="Пленный" FontSize="14" Foreground="#15bfb0"/>
                 </Border>
             </Grid>
-            
+
             <!-- Info -->
             <Border Background="White" CornerRadius="20" Margin="20,0,20,0" Padding="20">
                 <StackPanel>
@@ -49,7 +49,6 @@
             <!-- Browser -->
             <android:WebView Source="https://youtube.com/embed/BCuGmQqhpkw" Height="315" Margin="10"/>
             <not_android:WebView2 Source="https://youtube.com/embed/BCuGmQqhpkw" Height="315"/>
-
 
         </StackPanel>
 
