--- a/src/Zhyttya.UI.Uno/Zhyttya.UI.Uno.Shared/Pages/MainPage.xaml
+++ b/src/Zhyttya.UI.Uno/Zhyttya.UI.Uno.Shared/Pages/MainPage.xaml
@@ -2,19 +2,16 @@
       Background="{StaticResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
-        <StackPanel Margin="20,0,20,0">
+        <StackPanel Margin="20">
 
             <!-- Full name -->
-            <TextBox Background="White" CornerRadius="15" Padding="20"
-                     PlaceholderText="Номер телефона"/>
+            <TextBox PlaceholderText="Номер телефона"/>
 
             <!-- Full name -->
-            <TextBox Background="White" CornerRadius="15" Padding="20"
-                     PlaceholderText="Иванов Иван Иванович"/>
+            <TextBox PlaceholderText="Иванов Иван Иванович"/>
 
             <!-- Date of birth of the prisoner -->
-            <CalendarDatePicker Background="White" CornerRadius="15" Padding="20,20,20,20"
-                                PlaceholderText="Дата рождения пленного"/>
+            <CalendarDatePicker PlaceholderText="Дата рождения пленного"/>
 
             <!-- Search -->
             <Border Background="#391e62" CornerRadius="20" Padding="20">
